removed responsive because no need.                                             created a section                                                                -titles added ,                                                                 -image added.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <header>
     <div class="row">
-        <div class="col-md-4 col-7">
+        <div class="col-xl-3">
             <div class="logo-icon"></div>
             <h3 class="logo-txt">LOGO</h3>
         </div>
-        <div class="col-md-8 col-5">
+        <div class="col-xl-9 nv-2">
             <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid">
                   <button class="navbar-toggler nav-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,6 +48,20 @@
         </div>
     </div>
     </header>
+
+
+    <section style="text-align: center;" class="my-3">
+      <div class="row">
+        <div class="heading col-xl-12">
+          <h1>SOCIAL MEDIA MARKETING</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent<br>ipsum vitae odio blandit posuere. In ut fringilla odio oliva</p>
+        </div>
+        <div class="col-xl-12">
+          <img src="img.svg" alt="">
+        </div>
+      </div>
+    </section>
+
 
 </div>
 
